--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@ body, html {
     margin: 0;
     padding: 0;
     height: 100%;
-    border: 1px solid yellow;
 }
 
 .imagem {
@@ -11,6 +10,93 @@ body, html {
 }
 
 .conteudo {
+    padding: 3% 4%;
+    background: linear-gradient( #180add, #ba08d1) no-repeat;
     border: 1px solid blue;
     height: 600px;
+    min-width: 650px;
+    display: flex;
+}
+
+/*** Pagina sobre Arte***/
+#livros {
+    background-color: #ba08d1;
+    box-shadow: 20px 20px rgba(0, 0, 0, 0.5);
+    border-radius: 20px;
+    border: 2px solid orange;
+    min-width: 40%;
+    max-width: 40%;
+    min-height: 60%;
+    max-height: 90%;
+    padding: 1%;
+}
+
+#arte {
+    justify-content: center;
+    flex-wrap: wrap;
+}
+/*
+#desenho {
+    width: 400px;
+    height: 400px;
+    border-radius: 100px;
+    background: url(../images/desenho2.jpeg ) no-repeat center;
+    z-index: 5;
+}
+#desenho img{
+    width: 100%;
+    height: 100%;
+}
+*/
+
+
+/**** ****/
+
+p{
+    color: #fff;
+    margin-bottom: 3%;
+    padding: 0 5%;   /*5px 20px;*/
+    font-size: 1.2em;
+    
+}
+
+#descricao-home {
+    top: 0;
+    left: 0;
+    padding: 3% 4%;
+    width: 20%;
+    height: 30%;
+    margin: 20px;
+    box-shadow: 20px 20px rgba(0, 0, 0, 0.5);
+    border-radius: 20px;
+    background-color: #e907e1;
+}
+
+ul{
+    float: right;
+    list-style: none;
+    border: 5px solid red;
+    
+}
+
+ul a{
+    text-decoration: none;
+    padding: 5px;
+    font-size: 1.2em;
+    color: #fff;
+    line-height: 2.5em;
+}
+
+ul li:hover{
+    background-color: #ba08d1;
+    cursor: pointer;
+}
+
+#barra-horizontal li {
+    padding: 5px;
+    width:250px;
+    background: #de45c0;
+    border-bottom: #8b41b0 1px;
+    box-shadow: 15px 15px rgba(0, 0, 0, 0.5);
+    text-align: center;
 }
