--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body, html {
     margin: 0;
     padding: 0;
     height: 100%;
+    min-width: 650px;
 }
 
 span {
@@ -12,13 +13,9 @@ span {
     background: linear-gradient( #FA1690, #C61AA9, #7905BB, #150AAE, #04B3CE, #13EA88, #29CF20, #C5E818, #DDB010, #C3370B, #DC1A1D) no-repeat;
 }
 
-.conteudo {
-    padding: 3% 4%;
-    /*background: linear-gradient( #180add, #ba08d1) no-repeat;*/
-    border: 1px solid blue;
-    height: 600px;
-    min-width: 650px;
-    /*display: flex;*/
+.conteudo-principal {
+    height: 750px;
+    border: 5px solid yellow;
 }
 
 p{
@@ -29,17 +26,6 @@ p{
     
 }
 
-#descricao-home {
-    top: 0;
-    left: 0;
-    padding: 3% 4%;
-    width: 20%;
-    height: 30%;
-    margin: 20px;
-    box-shadow: 20px 20px rgba(0, 0, 0, 0.5);
-    border-radius: 20px;
-    background-color: #e907e1;
-}
 
 /**** TESTE IMAGEM ***/
 .teste {
@@ -92,7 +78,7 @@ span.titulo {
 }
 
 #imagem-academica span {
-    background-color: rgba(188, 20, 203, 0.803);
+    background-color: rgba(188, 20, 203, 0.5);
     border-radius: 10px;
 }
 
@@ -116,7 +102,7 @@ span.titulo {
 }
 
 #imagem-lazer span {
-    background-color: rgba(20, 93, 203, 0.803);
+    background-color: rgba(20, 93, 203, 0.6);
     border-radius: 10px;
 }
 
@@ -140,7 +126,7 @@ span.titulo {
 }
 
 #imagem-missa span {
-    background-color: rgba(203, 20, 20, 0.803);
+    background-color: rgba(203, 20, 20, 0.6);
     border-radius: 10px;
 }
 
@@ -164,7 +150,7 @@ span.titulo {
 }
 
 #imagem-musica span {
-    background-color: rgba(41, 203, 20, 0.803);
+    background-color: rgba(41, 203, 20, 0.6);
     border-radius: 10px;
 }
 
@@ -188,7 +174,7 @@ span.titulo {
 }
 
 #imagem-arte span {
-    background-color: rgba(151, 203, 20, 0.803);
+    background-color: rgba(151, 203, 20, 0.6);
     border-radius: 10px;
 }
 
@@ -361,4 +347,12 @@ span.titulo {
 
 #simave img {
     width: 100%;
+}
+
+/*** PAGINA PRINCIPAL ***/
+img.logo {
+    display: block;
+    top: 0;
+    margin-left: auto;
+    margin-right: auto;
 }
