--- a/css/style.css
+++ b/css/style.css
@@ -4,18 +4,22 @@ body, html {
     height: 100%;
     max-height: 1500px;
     min-width: 700px;
+
+    font-family: "Poppins-Regular";
 }
 
 span {
-    font-family: "Lato", 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: "Poppins-Bold";
+    font-size: 7em;
 }
+
 
 #container-principal {
     background: linear-gradient( #FA1690, #C61AA9, #7905BB, #150AAE, #04B3CE, #13EA88, #29CF20, #C5E818, #DDB010, #C3370B, #DC1A1D) no-repeat;
 }
 
 .conteudo-principal {
-    height: 750px;
+    height: 780px;
 
     display: flex;
     background-repeat: no-repeat;
@@ -53,8 +57,8 @@ span.titulo {
     text-transform: uppercase;
     background: radial-gradient(to right, #DC1A1D  #C3370B);
     padding: 18px;
-    font-size: 35px;
-    letter-spacing: 5px;
+    font-size: 75px;
+    /*letter-spacing: 5px;*/
 }
 
 #imagem-caixa {
@@ -87,11 +91,6 @@ span.titulo {
     justify-content: center;
 }
 
-#imagem-academica span {
-    /*background-color: rgba(188, 20, 203, 1);*/
-    border-radius: 10px;
-}
-
 #imagem-lazer{
     width: 80%;
     height: 90%;
@@ -104,16 +103,11 @@ span.titulo {
     border: 5px solid;
     border-color: #1ba3dde2 #3c48e8 #3c48e8 #1ba3dde2;
     margin: auto;
-    opacity: 0.8;
+    opacity: 0.6;
 
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-#imagem-lazer span {
-    background-color: rgba(20, 93, 203, 0.6);
-    border-radius: 10px;
 }
 
 #imagem-missa{
@@ -128,16 +122,11 @@ span.titulo {
     border: 5px solid;
     border-color: #C3370B #DC1A1D #DC1A1D  #C3370B;
     margin: auto;
-    opacity: 0.8;
+    opacity: 0.6;
     
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-#imagem-missa span {
-    background-color: rgba(203, 20, 20, 0.6);
-    border-radius: 10px;
 }
 
 #imagem-musica{
@@ -152,16 +141,11 @@ span.titulo {
     border: 5px solid;
     border-color: #0bc33c #0b6e03 #0b6e03 #0bc33c;
     margin: auto;
-    opacity: 0.8;
+    opacity: 0.6;
 
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-#imagem-musica span {
-    background-color: rgba(41, 203, 20, 0.6);
-    border-radius: 10px;
 }
 
 #imagem-arte{
@@ -176,21 +160,15 @@ span.titulo {
     border: 5px solid;
     border-color:#6dc020 #c0c30b #c0c30b  #6dc020 ;
     margin: auto;
-    opacity: 0.8;
+    opacity: 0.6;
 
     display: flex;
     align-items: center;
     justify-content: center;
 }
-
-#imagem-arte span {
-    background-color: rgba(151, 203, 20, 0.6);
-    border-radius: 10px;
-}
-
 /*** RELIGIAO ***/
 #religiao {
-    height: 720px;
+    height: 900px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -200,10 +178,11 @@ span.titulo {
     background-color: rgba(232, 82, 12, 0.905);
     box-shadow: -20px 20px rgba(0, 0, 0, 0.5);
     border-radius: 20px;
-    width: 40%;
+    width: 50%;
     min-width: 450px;
     max-height: 100%;
     padding: 1%;
+    font-size: 0.85em;
 }
 
 #box-religiao p {
@@ -223,7 +202,7 @@ span.titulo {
 
 /*** Musica ***/
 #musica {
-    height: 720px;
+    height: 950px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -239,6 +218,7 @@ span.titulo {
     min-height: 60%;
     max-height: 90%;
     padding: 1%;
+    font-size: 0.85em;
 }
 
 #box-musica p {
@@ -275,6 +255,7 @@ span.titulo {
     min-height: 60%;
     max-height: 90%;
     padding: 1%;
+    font-size: 0.85em;
 }
 
 #box-arte p {
@@ -282,7 +263,7 @@ span.titulo {
 }
 
 #desenho {
-    width: 20%;
+    width: 22%;
     border: 7px solid;
     border-color:#d4ca0de2 #c6c91b #a15912 #ec8c1fe2;
     box-shadow: 0px 0px 30px 25px rgb(130, 130, 10);
@@ -294,7 +275,7 @@ span.titulo {
 
 /*** Lazer ***/
 #lazer {
-    height: 900px;
+    height: 950px;
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-around;
@@ -309,6 +290,7 @@ span.titulo {
     min-width: 450px;
     max-height: 115%;
     padding: 1%;
+    font-size: 0.85em;
 }
 
 #box-lazer p {
@@ -342,6 +324,8 @@ span.titulo {
     width: 40%;
     min-width: 450px;
     padding: 1%;
+    font-size: 0.9em;
+    font-size: 0.85em;
 }
 
 #box-academico p {
@@ -361,59 +345,60 @@ span.titulo {
 
 /*** PAGINA PRINCIPAL ***/
 
-/* Coluna Esquerda */
-#coluna-esquerda {
-    width: 30%;
-    min-width: 300px;
+#coluna1 {
+    width: 48%;
+    min-width: 310px;
+    height: 100%;
+    min-width: 250px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     /*border: 5px solid blue;*/
-    margin-bottom: 100px;
-    font-size: 1.2em;
-    background: rgba(0, 238, 255, 0.15);
-    border-radius: 20px;
-    padding: 15px;
 }
 
-#coluna-esquerda p {
-    color: #00eaff;
+#logo {
+    width: 100%;
+    display: flex;
+    background-position: center;
+    background-repeat: no-repeat;
+    justify-content: center;
 }
 
-/* Coluna Meio */
-/*#coluna-meio {
-    width: 60%;
-    min-width: 250px;
-    /*border: 5px solid green;
-    font-size: 1.8em;
-    background: rgba(255, 234, 0, 0.15);
-    border-radius: 20px;
-    padding: 15px;
-}*/
-
-#coluna-meio {
-    width: 60%;
-    min-width: 300px;
-    height: 90%;
-    min-width: 250px;
-    font-size: 1.8em;
-    background: rgba(255, 234, 0, 0.15);
-    border-radius: 20px;
-    padding: 15px;
+#logo img {
+    margin-top: 50px;
+    width: 100%;
+    max-width: 400px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-#coluna-meio p {
+
+.mundo p {
    color: #ffd412; 
+}
+
+.mundo {
+    font-size: 1.45em;
+    background: rgba(255, 234, 0, 0.15);
+    border-radius: 20px;
+    padding: 15px;
+    margin-top: auto;
+    margin-bottom: auto;
+    text-align: center;
 }
 
 /*Coluna Direita */
 #coluna-direita {
-    width: 30%;
+    width: 40%;
     min-width: 400px;
-    font-size: 1.3em;
+    font-size: 1em;
     background: rgba(230, 0, 255, 0.15);
     border-radius: 20px;
 }
 
 #coluna-direita p {
-    color: #d68eff;
+    /*color: #d68eff;*/
+    color: #00eaff;
 }
 
 #perfil {
@@ -428,6 +413,32 @@ span.titulo {
     border: 5px solid #c61bdde2;
 }
 
-#coluna-meio img{
-    width: 90%;
+#conteudo-principal img{
+    width: 55%;
+    min-width: 250px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#coluna-direita #perfil {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/*** FONTES ***/
+@font-face {
+    font-family: "Poppins-Black";
+    src: url("../fonts/Poppins-Black.woff");
+}
+
+@font-face {
+    font-family: "Poppins-Bold";
+    src: url("../fonts/Poppins-Bold.woff");
+}
+
+@font-face {
+    font-family: "Poppins-Regular";
+    src: url("../fonts/Poppins-Regular.woff");
+    font-size: 0.85em;
+    font-weight: 800;
 }
